Mobile filtering + improvements

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="wrapper">
         <div class="loader"></div>
         <div class="searchengine">
+            <button class="mainBtn" onclick="openFilters()" id="filterBtn"><img id='filterBtnIcon' src="images/filter.svg" draggable="false"  alt=""></button>
             <input type="text" name="search" id="searchBar" autocomplete="off" placeholder="Search for a Riven">
-            <button onclick="filterTable()" id="searchBtn"><img id='searchBtnIcon' src="images/search.svg" draggable="false"  alt=""></button>
+            <button class="mainBtn" onclick="filterTable()" id="searchBtn"><img id='searchBtnIcon' src="images/search.svg" draggable="false"  alt=""></button>
         </div>
 
         <div class="cards-container">
